[package]
name = "tracing-cloudwatch"
version = "0.1.5"
edition = "2021"
license = "MIT"
description = "tracing-subscriber layer that sends your application's tracing events(logs) to AWS CloudWatch Logs"
repository = "https://github.com/ymgyt/tracing-cloudwatch"
readme = "README.md"
keywords = ["tracing", "aws", "cloudwatch"]
categories = ["development-tools::debugging"]

[features]
default = []
rusoto = ["rusoto_logs/default", "rusoto_core/default"]
rusoto_rustls = ["rusoto_logs/rustls", "rusoto_core/rustls"]
awssdk = ["aws-sdk-cloudwatchlogs"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
aws-sdk-cloudwatchlogs = { version = "1", default-features = false, optional = true }
chrono = "0.4"
rusoto_core = { version = "0.48", default-features = false, optional = true }
rusoto_logs = { version = "0.48", default-features = false, optional = true }
thiserror = "1.0"
tokio = { version = "1", features = ["rt", "sync", "time", "macros"] }
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-core = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "std",
  "fmt",
  "smallvec",
] }

[dev-dependencies]
aws-config = "0.56"
tokio = { version = "1.28.0", features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "time",
] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
